[package]
name       = "rusti2p"
version    = "0.2.6"
authors    = ["Stallmanifold <stallmanifold@gmail.com>"]
readme     = "README.md"
repository = "https://github.com/stallmanifold/rust-i2p.git"

[dependencies]
chrono          = "0.2.25"
quickcheck      = "0.3.1"
rand            = "0.3.14"
rustc-serialize = "0.3"
